2010-04-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r57609.
        http://trac.webkit.org/changeset/57609
        https://bugs.webkit.org/show_bug.cgi?id=37614

        "Broke multiple builders.  Probably needs new test results,
        but may be an Inspector bug." (Requested by eseidel on
        #webkit).

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didReceiveResponse):
        (WebCore::InspectorController::didFailLoading):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource.prototype._mimeTypeIsConsistentWithType):
        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourcesPanel.prototype.recreateViewForResourceIfNeeded):

2010-04-14  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Dan Bernstein.

        Don't cache SimpleFontData* in getLastResortFallbackFont. The cached entry may be invalidated.
        https://bugs.webkit.org/show_bug.cgi?id=37599

        * platform/graphics/win/FontCacheWin.cpp:
        (WebCore::fontDataFromDescriptionAndLogFont):
        (WebCore::FontCache::getLastResortFallbackFont):

2010-04-14  Andrey Kosyakov  <caseq@chromium.ru>

        Reviewed by Timothy Hatcher.

        Log error message to inspector console if a resource fails to load.
        Disable checking of mime-type consistency for failed resources.
        https://bugs.webkit.org/show_bug.cgi?id=37215

        Test: inspector/console-resource-errors.html

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didReceiveResponse):
        (WebCore::InspectorController::didFailLoading):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource.prototype._mimeTypeIsConsistentWithType):
        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourcesPanel.prototype.recreateViewForResourceIfNeeded):

2010-04-14  Sheriff Bot  <webkit.review.bot@gmail.com>
